--- a/install/nginx-quic.conf
+++ b/install/nginx-quic.conf
@@ -14,6 +14,8 @@ http {
 		# to use the same port for quic and https
 		listen 443 http3 reuseport;
 		listen 443 ssl http2;
+		listen [::]:443 http3 reuseport;
+		listen [::]:443 ssl http2;
 
 		ssl_certificate      localhost.pem;
 		ssl_certificate_key  localhost-key.pem;
