--- a/install/nginx.conf
+++ b/install/nginx.conf
@@ -9,12 +9,14 @@ http {
 
         # Enable HTTP/2 (optional).
         listen 443 ssl http2;
-
+	listen [::]:443 quic reuseport;
+	listen [::]:443 ssl http2;
+	
         ssl_certificate      localhost.pem;
         ssl_certificate_key  localhost-key.pem;
 
         # Enable all TLS versions (TLSv1.3 is required for QUIC).
-        ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
+        ssl_protocols TLSv1.3;
         
         # Add Alt-Svc header to negotiate HTTP/3.
         add_header alt-svc 'h3-27=":443"; ma=86400, h3-28=":443"; ma=86400, h3-29=":443"; ma=86400';
