Added header to tell which http version is being used

--- a/install/nginx-quic.conf
+++ b/install/nginx-quic.conf
@@ -25,6 +25,7 @@ http {
 		location / {
 		# required for browsers to direct them into quic port
 		add_header Alt-Svc '$http3=":443"; ma=86400';
+		add_header version "${http2}${http3}";
 		}
 	}
 }
