--- a/install/nginx.conf
+++ b/install/nginx.conf
@@ -20,5 +20,6 @@ http {
         
         # Add Alt-Svc header to negotiate HTTP/3.
         add_header alt-svc 'h3-27=":443"; ma=86400, h3-28=":443"; ma=86400, h3-29=":443"; ma=86400';
+        add_header version "${http2}${http3}";
     }
 }
