--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install docopt, tqdm, playwright
+        pip install docopt tqdm playwright
         python -m playwright install
     - name: Lint with flake8
       run: |
