--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,8 +24,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8
-        pip install docopt tqdm playwright
-        python -m playwright install
+        pip install -r install/requirements.txt
+        playwright install
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
