--- a/install/nginx.conf
+++ b/install/nginx.conf
@@ -21,5 +21,11 @@ http {
         # Add Alt-Svc header to negotiate HTTP/3.
         add_header alt-svc 'h3-27=":443"; ma=86400, h3-28=":443"; ma=86400, h3-29=":443"; ma=86400';
         add_header version "${http2}${http3}";
+    		# Add more payload
+        root payloads;
+
+        location / {
+
+        }
     }
 }
