--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,4 +34,4 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics --builtins="SyncPlaywrightContextManager,Page"
     - name: Test
       run: |
-        python experiment.py --url https://www.google.com --browsers firefox --browsers chromium --out :memory:
+        python experiment.py --url https://www.google.com --browsers firefox --browsers chromium --runs 2 --out :memory:
