add complex webpage

--- a/install/nginx-quic.conf
+++ b/install/nginx-quic.conf
@@ -27,5 +27,6 @@ http {
 		add_header Alt-Svc '$http3=":444"; ma=86400';
 		add_header version "${http2}${http3}";
 		}
+		root /usr/local/nginx/payloads;
 	}
 }
