--- a/Caddyfile
+++ b/Caddyfile
@@ -1,8 +1,11 @@
 {
-	experimental_http3
-	https_port 445
+        experimental_http3
+        https_port 445
 }
-localhost {
+10.0.0.10 {
+    log {
+
+    }
     root * /usr/local/nginx/payloads
     file_server
     tls /usr/local/nginx/conf/localhost.pem /usr/local/nginx/conf/localhost-key.pem
