--- a/Caddyfile
+++ b/Caddyfile
@@ -6,7 +6,7 @@
     log {
 
     }
-    root * /usr/local/nginx/payloads
+    root * /usr/local/payloads
     file_server
     tls /usr/local/nginx/conf/localhost.pem /usr/local/nginx/conf/localhost-key.pem
 }
