--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,9 +29,9 @@ jobs:
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics --builtins="SyncPlaywrightContextManager,Page"
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics --builtins="AsyncPlaywrightContextManager,SyncPlaywrightContextManager,Page"
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics --builtins="SyncPlaywrightContextManager,Page"
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics --builtins="AsyncPlaywrightContextManager,SyncPlaywrightContextManager,Page"
     - name: Test
       run: |
         python experiment.py --url https://www.google.com --browsers firefox --browsers chromium --runs 2 --out :memory:
