--- a/install/lsws/conf/vhosts/Example/vhconf.conf
+++ b/install/lsws/conf/vhosts/Example/vhconf.conf
@@ -1,4 +1,4 @@
-docRoot                   /usr/local/nginx/html
+docRoot                   /usr/local/payloads
 enableGzip                0
 enableIpGeo               0
 cgroups                   0
